# python

./: .dockerignore  api_runner.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: deploy_google_run.yml  docker_build_push_google.yml  tests.yml
alembic/: env.py
alembic/versions/: 2a9b013a97d9_add_goals.py  400d83dc4ba1_add_apple_id_and_is_active_fields.py  613b685e397e_create_users_table.py  683aa09f9c42_add_chat_and_message_models.py  ba1e0eb44642_add_apple_id_and_is_active_fields_update.py  df59da9b2b44_add_tool_call_data_to_messages.py
core/: 10_exeptions.py  11_dunder.py  12_copy_examples.py  13_pydantic_examples.py  1_data_types.py  2_if_else_loop.py  3_comprehensions.py  4_functions.py  5_wrappers.py  7_with.py  8_yield.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  init_db.sql
docker/volume/postgres_dev_data/: postmaster.pid
docker/volume/redis_dev_data/: dump.rdb
docs/: alembic.md  docker.md
sql/: command.md
src/: __init__.py
src/agent/: __init__.py  configs.py  exceptions.py  orchestrator.py
src/agent/dto/: __init__.py  (+1 more)
src/api/: __init__.py  app.py  exception_handlers.py  exceptions.py
src/models/: __init__.py  chat.py  goal.py  message.py  user.py
src/repositories/: chat_repository.py  goal_repository.py  message_repository.py  user_repository.py
tests/: conftest.py
tests/integration/: conftest.py  init_db.sql  test_chat_api.py  test_user_repository.py  test_user_service.py  test_users.py  test_users_api.py
tests/unit/: conftest.py
tests/utils/: cli_chat.py
(+125 files in other folders)
