[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.2",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-jose>=3.5.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
